tests/errors/no_semicolon_after_increment_for.odl
main :: () -> void {
    for x := 0; x < 10; ++i; do 0;
};